--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,16 @@
 FROM python:3.12-slim
-
 WORKDIR /app
-
-# Install dependencies
+# Install only essential build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+# Copy requirements file
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
+# Update pip and install dependencies with optimized settings
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir --compile -r requirements.txt
 # Copy application code
 COPY . .
-
-# Run the application
-CMD ["hypercorn", "main:app", "--bind", "0.0.0.0:$PORT"]
+# Use CMD without worker-class asyncio flag
+CMD hypercorn main:app --bind 0.0.0.0:$PORT
